--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
 <html>
 <body>
-Changed
-<div class='header'><h1>Home</h1></div>
-<div class='search-view'>
-<input class='search-key' type="text"/>
-<ul class='employee-list'></ul>
+	<h2>Welcom to the wonderfull world of App building</h2>
+	<div class='header'><h1>Home</h1></div>
+	<div class='search-view'>
+	<input class='search-key' type="text"/>
+	<ul class='employee-list'></ul>
 </div>
 
 <script src="lib/jquery-1.8.2.min.js"></script>
